--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# SQL Server 2008 R2#
+#   Asegurarse que el gem 'activerecord-sqlserver-adapter' esta definido en el Gemfile
+#   gem 'activerecord-sqlserver-adapter'
+#   Asegurarse que el gem 'ruby-odbc' esta definido en el Gemfile
+#   gem 'tiny_tds'
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+#   Ver el archivo APP_PATH/Gemfile
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
+  adapter: sqlserver
+  dataserver: 'localhost\SQLEXPRESS'
+  database AdventureWorks2008R2
+  username: sa
+  password: 123456
   timeout: 5000
+
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
