Added Person resource scaffold
Updated README.md adding Known Problems and Possible Solutions section.
Added some fixes to Employee resource scaffold and added a fixed
reverse_scaffold script.

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,7 @@ development:
   username: sa
   password: "123456"
   timeout: 5000
+  encoding: utf8
 
 
 # Warning: The database defined as "test" will be erased and
