Agregué un nombre canonical en vez de la dirección IP de manera tal a mantener este archivo sin modificaciones innecesarias. El nombre se resuelve en el archivo /etc/hosts

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 #   Ver el archivo APP_PATH/Gemfile
 development:
   adapter: sqlserver
-  dataserver: '127.0.0.1\SQLEXPRESS'
+  dataserver: 'uni-bd-2012.dev\SQLEXPRESS'
   database: AdventureWorks2008R2
   username: sa
   password: "123456"
